# bug_maker_bot

./: bug_maker.py  config.py  pyproject.toml
